# nova-verifier

./: .gitignore  Cargo.toml
src/: deserializer.rs  errors.rs  lib.rs  proba.rs  pubs.rs  tests.rs  verifier.rs
src/resources/json/: compressed_snark.json  other.json
src/resources/json/quadratic/: compressed_snark.json  pubs.json
src/resources/txt/cubic/: compressed_snark.txt
src/resources/txt/quadratic/: compressed_snark.txt  pubs.txt
