[package]
name = "nova-verifier"
version = "0.1.0"
edition = "2021"
authors = ["Milos Djurica <milos.djurica@mvpworkshop.co>"]
description = "A short description of your crate."
license = "MIT"
repository = "https://github.com/MVPWorkshop/nova-verifier"
documentation = "https://docs.rs/your_crate"
keywords = ["cryptography", "no_std", "nova", "SNARK", "zero knowledge", "zk"]
categories = ["no-std", "cryptography"]
readme = "README.md"
exclude = [".github", ".gitignore", "tests/*", "examples/*"]


[dependencies]
no_std_nova_snark = { git = "https://github.com/MVPWorkshop/Nova", branch = "no_std", default-features = false }
# no_std_nova_snark = { path = "../Nova", default-features = false }
ff = { version = "0.13.0", default-features = false }
postcard = { version = "1.1.1", default-features = false, features = ["alloc"] }
thiserror = { version = "2.0.9", default-features = false }
pasta_curves = { version = "0.5.1", default-features = false }
serde = { version = "1.0.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
lazy_static = { version = "*", default-features = false, features = [
    "spin_no_std",
] }

[dev-dependencies]
serde_json = "1.0.137"
# critical-section-single-core = "1"
